# pico_switches

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: main.c.A5F690F4D4AAB56D.idx
Core/inc/: crc8.h
Core/src/: crc8.c  main.c
